Started to add new workflow section

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -11,7 +11,8 @@
 
 
 % title
-\title{``Can I Implement Your Algorithm?'':\\A Model for Reproducible Research Software}
+\title{``Reproducibility-as-a-Service'':\\Publishing Useful and Usable Scientific Models}
+%\title{``Can I Implement Your Algorithm?'':\\A Model for Reproducible Research Software}
 
 \author[1]{Tom Crick}
 \author[2]{Samin Ishtiaq}
@@ -115,7 +116,7 @@ development and usage in science and engineering.  The basis for many
 of these recommendations is predicated on the basic scientific tenet
 of openness.
 
-\section{A Model for Reproducible Research Software}
+\section{We Need to Talk About Reproducibility}
 
 % Recommendation I
 \subsection{Can I Implement Your Algorithm?}
@@ -224,7 +225,7 @@ computational skills are taught as core at undergraduate and
 postgraduate level.
 
 % Recommendation IV
-\subsection{Latin Is The Language Of God} 
+\subsection{The Lingua Franca of Computational Science} 
 
 There is no other scientific or technical field where its participants
 can just make up a non-principled artefact like a programming language
@@ -318,7 +319,7 @@ files\footnote{\url{http://blog.rtwilson.com/encouraging-citation-of-software-in
 
 \begin{figure}[!ht]
 \centering
-\includegraphics[width=0.9\columnwidth]{overlyhonesttweet.png}
+\includegraphics[width=0.9\columnwidth]{images/overlyhonesttweet.png}
 \caption{{\texttt{\#overlyhonestmethods}} on Twitter\newline [source: \url{https://twitter.com/ianholmes/status/288689712636493824}]}
 \label{fig:overlyhonestmethod} 
 \end{figure}
@@ -438,10 +439,20 @@ great start that begin to expose what can be done in this area.
 % removed: ~\cite{tryFsharp} ~\cite{Z3tutorial}
 
 
-\section{Conclusions: A New Model}\label{sec:Conclusion} 
+\section{A Model for Reproducible Research Software}\label{sec:Conclusion} 
+%\section{Conclusions: A New Model}
 
 \noindent{\textbf{This is how we imagine the future for research
-software:}}\newline\newline Suppose you have come up with a better
+software:}}\newline\newline
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[width=0.9\columnwidth]{images/workflow.png}
+\caption{Proposed system workflow}
+\label{fig:workflow} 
+\end{figure}
+
+Suppose you have come up with a better
 algorithm to deal with some standard problem.  You write up the paper
 on the algorithm, and you also push a C++ implementation of your
 algorithm to the our cloud environment's section on this standard problem.
