CAV tool flow diagram.

--- a/jors2015.tex
+++ b/jors2015.tex
@@ -458,6 +458,13 @@ algorithm to deal with some standard problem.  You write up the paper
 on the algorithm, and you also push a C++ implementation of your
 algorithm to the our cloud environment's section on this standard problem.
 
+\begin{figure}[!ht]
+	\centering
+	\includegraphics[width=\textwidth]{workflow}
+	\caption{Proposed reproducibility service workflow}
+	\label{schematic}
+\end{figure}
+
 The effect of pushing your implementation is to register your program
 as a possible competitor in this standard problem competition. There
 are several dozen widely-agreed tests on this problem already on our
