Shaped the intro and conclusions, plus new refs

--- a/jors2015.bib
+++ b/jors2015.bib
@@ -190,7 +190,7 @@ title = {Scalable Algorithms for Molecular Dynamics Simulations on Commodity Clu
 @ARTICLE{crick-et-al:2009b,
   author = {Tom Crick and Peter Dunning and Hyunsun Kim and Julian Padget},
   title = {{Engineering Design Optimization using Services and Workflows}},
-  journal = {{Philosophical Transactions of the Royal Society A: Mathematical, Physical and Engineering Sciences}},
+  journal = {{Philosophical Transactions of the Royal Society A}},
   year = {2009},
   volume = {367},
   pages = {2741--2751},
@@ -359,3 +359,87 @@ journal = {Science}
   year = 	 {2010}
 }
 
+@Unpublished{crick-et-al-cav,
+  author = 	 {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
+  title = 	 {{Dear CAV, We Need to Talk About Reproducibility}},
+  note = 	 {Available from: \url{http://arxiv.org/abs/1502.02448}},
+  month = 	 {February},
+  year = 	 {2015}
+}
+
+@INPROCEEDINGS{crick-et-al_recomp2014,
+  author =      {Tom Crick and Benjamin A. Hall and Samin Ishtiaq and Kenji Takeda},
+  title =       {{``Share and Enjoy'': Publishing Useful (and Usable) Scientific Models}},
+  booktitle =   {{Proceedings of 1st International Workshop on Recomputability}},
+  year =        {2014}
+}
+
+@INPROCEEDINGS{crick-et-al_wssspe2,
+  author =      {Tom Crick and Benjamin A. Hall and Samin Ishtiaq},
+  title =       {{``Can I Implement Your Algorithm?'': A Model for Reproducible Research Software}},
+  booktitle =   {{Proceedings of 2nd International Workshop on Sustainable Software for Science: Practice and Experiences (WSSSPE2)}},
+  year =        {2014}
+}
+
+@Misc{deroure:2010,
+  author = 	 {David {De Roure}},
+  title = 	 {{Replacing the Paper: The Twelve Rs of the e-Research Record}},
+  howpublished = {\url{http://www.scilogs.com/eresearch/replacing-the-paper-the-twelve-rs-of-the-e-research-record/}},
+  month = 	 {November},
+  year = 	 {2011}
+}
+
+@Article{joppa-et-al:2013,
+  author = 	 {Lucas N. Joppa and Greg McInerny and Richard Harper and Lara Salido and Kenji Takeda and Kenton O'Hara and David Gavaghan and Stephen Emmott},
+  title = 	 {{Troubling Trends in Scientific Software Use}},
+  journal = 	 {Science},
+  year = 	 {2013},
+  volume = 	 {340},
+  number = 	 {6134},
+  pages = 	 {814--815}
+}
+
+@Article{bechhofer-et-al:2013,
+  author = 	 {Sean Bechhofer and Iain Buchan and David {De Roure} and Paolo Missier and John Ainsworth and Jiten Bhagata and Philip Couch and Don Cruickshank and Mark Delderfield and Ian Dunlop and Matthew Gamble and Danius Michaelides and Stuart Owen and David Newman and Shoaib Sufi and Carole Goble},
+  title = 	 {{Why linked data is not enough for scientists}},
+  journal = 	 {{Future Generation Computer Systems}},
+  year = 	 {2013},
+  volume = 	 {29},
+  number = 	 {2},
+  pages = 	 {599--611}
+}
+
+@Article{osherovich:2011,
+  author = 	 {Lev Osherovich},
+  title = 	 {{Hedging against academic risk}},
+  journal = 	 {{Science-Business eXchange}},
+  year = 	 {2011},
+  volume = 	 {4},
+  number = 	 {15}
+}
+
+@Article{stodden+miguez:2014,
+  author = 	 {Victoria Stodden and Sheila Miguez},
+  title = 	 {{Best Practices for Computational Science: Software Infrastructure and Environments for Reproducible and Extensible Research}},
+  journal = 	 {{Journal of Open Research Software}},
+  year = 	 {2014},
+  volume = 	 {2},
+  number = 	 {1},
+  pages = 	 {1--6}
+}
+
+@Article{rollins-et-al:2014,
+  author = 	 {Nathan D. Rollins and C. Michael Barton and Sean Bergin and Marco A. Janssen and Allen Lee},
+  title = 	 {{A Computational Model Library for publishing model documentation and code}},
+  journal = 	 {{Environmental Modelling \& Software}},
+  year = 	 {2014},
+  volume = 	 {61},
+  pages = 	 {59--64}
+}
+
+@Book{hey:2009,
+  editor = 	 {Tony Hey and Stewart Tansley and Kristin Tolle},
+  title = 	 {{The Fourth Paradigm: Data-Intensive Scientific Discovery}},
+  publisher = 	 {{Microsoft Research}},
+  year = 	 {2009}
+}
